--- a/api-samples/history/showHistory/typed-urls.html
+++ b/api-samples/history/showHistory/typed-urls.html
@@ -7,11 +7,11 @@
         min-width: 250px;
       }
     </style>
-    <script src="typedUrls.js"></script>
   </head>
 
   <body>
     <h2>Recently Typed URLs:</h2>
+    <script src="typed-urls.js"></script>
     <div id="typedUrl_div"></div>
   </body>
 </html>
