Fixes for web_accessible_resources sample.

--- a/api-samples/web-accessible-resources/index.html
+++ b/api-samples/web-accessible-resources/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Accessible Resources - Readme</title>
+    <title>Web Accessible Resources</title>
     <style>
       body {
         font-family: Helvetica, Arial, sans-serif;
@@ -35,7 +35,7 @@
       do this, we define a set of
       <a
         href="https://developer.chrome.com/docs/extensions/mv3/manifest/web_accessible_resources/"
-        ><code>"web_accessable_resources"</code></a
+        ><code>"web_accessible_resources"</code></a
       >
       in our <a href="manifest.json">manifest.json</a>. This object specifies
       what assets should be accessible to which external resources.
