--- a/api-samples/sandbox/sandbox/sandbox.html
+++ b/api-samples/sandbox/sandbox/sandbox.html
@@ -57,11 +57,11 @@ limitations under the License.
       // Set up message event handler:
       window.addEventListener('message', function (event) {
         const command = event.data.command;
-        let template = templates[event.data.templateName],
+        const template = templates[event.data.templateName],
           result = 'invalid request';
 
         // if we don't know the templateName requested, return an error message
-        if (!template) {
+        if !(template) {
           result = 'Unknown template: ' + event.data.templateName;
         } else {
           switch (command) {
