--- a/functional-samples/tutorial.hello-world/hello.html
+++ b/functional-samples/tutorial.hello-world/hello.html
@@ -1,6 +1,10 @@
 <html>
   <body>
+    <!-- This is a hello world popper using javaScript -->
+    <!-- This is a header -->
     <h1>Hello Extensions</h1>
+
+    <!-- javaScript linked -->
     <script src="popup.js"></script>
   </body>
 </html>
