--- a/api-samples/sandbox/sandbox/sandbox.html
+++ b/api-samples/sandbox/sandbox/sandbox.html
@@ -57,13 +57,11 @@ limitations under the License.
       // Set up message event handler:
       window.addEventListener('message', function (event) {
         const command = event.data.command;
-        let template = templates[event.data.templateName],
+        const template = templates[event.data.templateName],
           result = 'invalid request';
 
         // if we don't know the templateName requested, return an error message
-        if (!template) {
-          result = 'Unknown template: ' + event.data.templateName;
-        } else {
+        if (template) {
           switch (command) {
             case 'render':
               result = template(event.data.context);
@@ -75,6 +73,8 @@ limitations under the License.
             //   result = template(event.data.context);
             //   break;
           }
+        } else {
+          result = 'Unknown template: ' + event.data.templateName;
         }
         event.source.postMessage({ result: result }, event.origin);
       });
