Add sidepanel open cookbook

--- a/functional-samples/cookbook.sidepanel-open/sidepanel-tab.html
+++ b/functional-samples/cookbook.sidepanel-open/sidepanel-tab.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Open tab-specific side panel</title>
-  </head>
   <body>
-    <h1>A shortcut opened this Side panel!</h1>
+    <h1>A shortcut opened this side panel!</h1>
     <p>This side panel was opened on the current tab with a shortcut</p>
   </body>
 </html>
