Add extension page Add content script

--- a/functional-samples/cookbook.sidepanel-open/sidepanel-tab.html
+++ b/functional-samples/cookbook.sidepanel-open/sidepanel-tab.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>A shortcut opened this side panel!</h1>
-    <p>This side panel was opened on the current tab with a shortcut</p>
+    <h1>Tab-specific side panel</h1>
+    <p>This side panel is available and stays open only on the current tab</p>
   </body>
 </html>
