--- a/functional-samples/cookbook.sidepanel-open/sidepanel-global.html
+++ b/functional-samples/cookbook.sidepanel-open/sidepanel-global.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>A context menu opened this panel!</h1>
-    <p>This is a global side panel that was opened by a context menu!</p>
+    <h1>Global side panel</h1>
+    <p>
+      This is a global side panel, which means it remains open on every tab.
+    </p>
   </body>
 </html>
