Set checkboxs to disabled

--- a/api-samples/tabs/inspector/tabs_api.html
+++ b/api-samples/tabs/inspector/tabs_api.html
@@ -20,8 +20,8 @@
           <input class="window_top" type="text" /> width:
           <input class="window_width" type="text" /> height:
           <input class="window_height" type="text" />
-          <input class="window_focused" type="checkbox" /> Focused
-          <input class="window_current" type="checkbox" /> Current
+          <input class="window_focused" type="checkbox" disabled /> Focused
+          <input class="window_current" type="checkbox" disabled /> Current
           <button class="window_refresh">Refresh</button>
         </div>
         <div id="tabList">
