Fix wrong input data in create tab function

--- a/api-samples/tabs/inspector/tabs_api.html
+++ b/api-samples/tabs/inspector/tabs_api.html
@@ -46,11 +46,11 @@
           </div>
         </div>
         <div class="wrapper">
-          <div>
+          <div class="input-group">
             <div class="label">title:</div>
             <input type="text" class="tab_title" />
           </div>
-          <div>
+          <div class="input-group">
             <div class="label">url:</div>
             <input type="text" class="tab_url" />
           </div>
@@ -69,13 +69,12 @@
           left:
           <input type="text" id="new_window_left" /> top:
           <input type="text" id="new_window_top" /> width:
-          <input type="text" id="new_window_width" />
-          height:
+          <input type="text" id="new_window_width" /> height:
           <input type="text" id="new_window_height" />
         </div>
       </div>
       <div class="wrapper">
-        <div>
+        <div class="input-group">
           <div class="label">url:</div>
           <input type="text" id="new_window_url" />
         </div>
@@ -85,15 +84,15 @@
     <div class="new-tab-wrapper">
       <h3>Create Tab</h3>
       <div class="wrapper">
-        <div>
-          <div class="label">title:</div>
-          <input type="text" id="title_new" />
+        <div class="input-group">
+          <div class="label">windowId:</div>
+          <input type="text" id="window_id_new" />
         </div>
-        <div>
+        <div class="input-group">
           <div class="label">url:</div>
           <input type="text" id="url_new" />
         </div>
-        <div><input type="checkbox" id="selected_new" /> Selected</div>
+        <div><input type="checkbox" id="active_new" /> active</div>
       </div>
       <button id="create_tab_button">Create</button>
     </div>
