--- a/api-samples/declarativeNetRequest/no-cookies-manager/manager.html
+++ b/api-samples/declarativeNetRequest/no-cookies-manager/manager.html
@@ -10,7 +10,7 @@
   <body>
     <div class="toolbar">
       <button id="addRuleButton">Add Rule</button>
-      <button id="addRuleButton">View Current Rule List</button>
+      <button id="viewRuleButton">View Current Rule List</button>
       <small>
         Requests matching the following conditions will be prohibited from
         carrying cookies.
