--- a/api-samples/tabs/inspector/window_and_tabs_manager.html
+++ b/api-samples/tabs/inspector/window_and_tabs_manager.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Tabs Inspector</title>
-    <link rel="stylesheet" href="./tabs_api.css" />
+    <link rel="stylesheet" href="./window_and_tabs_manager.css" />
   </head>
 
   <body>
@@ -104,6 +104,6 @@
       <button class="new_window_button">New Window</button>
     </div>
     <div id="log"></div>
-    <script src="tabs_api.js"></script>
+    <script src="window_and_tabs_manager.js"></script>
   </body>
 </html>
