Update active check box

--- a/api-samples/tabs/inspector/window_and_tabs_manager.html
+++ b/api-samples/tabs/inspector/window_and_tabs_manager.html
@@ -54,9 +54,7 @@
             <div class="label">url:</div>
             <input type="text" class="tab_url" />
           </div>
-          <div>
-            <input type="checkbox" class="tab_active" disabled /> Active
-          </div>
+          <div><input type="checkbox" class="tab_active" /> Active</div>
         </div>
         <button class="update_tab_button">Update Tab</button>
         <button class="remove_tab_button">Close Tab</button>
