Update code style

--- a/api-samples/tabs/inspector/window_and_tabs_manager.html
+++ b/api-samples/tabs/inspector/window_and_tabs_manager.html
@@ -95,11 +95,11 @@
       <button id="create_tab_button">Create</button>
     </div>
     <div class="actions-wrapper">
-      <button class="load_window_list_button">Refresh</button>
-      <button class="update_all_button">Update All</button>
-      <button class="move_all_button">Move All</button>
-      <button class="clear_log_button">-->Clear Log</button>
-      <button class="new_window_button">New Window</button>
+      <button id="load_window_list_button">Refresh</button>
+      <button id="update_all_button">Update All</button>
+      <button id="move_all_button">Move All</button>
+      <button id="clear_log_button">Clear Log</button>
+      <button id="new_window_button">New Window</button>
     </div>
     <div id="log"></div>
     <script src="window_and_tabs_manager.js"></script>
