Add Puppeteer testing tutorial

--- a/api-samples/history/showHistory/popup.html
+++ b/api-samples/history/showHistory/popup.html
@@ -11,7 +11,7 @@
 
   <body>
     <h2>Recently Typed URLs:</h2>
-    <script src="typed-urls.js"></script>
+    <script src="popup.js"></script>
     <div id="typedUrl_div"></div>
   </body>
 </html>
