Consolidate the roll-printing sample with the regular sample
There is now a checkbox on the main UI to select roll printers or all
printers.  For roll printing, this sample now demonstrates how to check
if the printer is capable of roll printing, if the printer is capable of
trimming the paper after printing, and how the media length can be a
variable value.

--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -29,6 +29,8 @@
 
     <h2>Printers:</h2>
     <div id="printers">
+      <input type='checkbox' id='rollPrinters' name='rollPrinters'>
+      <label for='rollPrinters'>Roll Printers</label>
       <table id="printersTable">
         <thead>
           <tr>
@@ -41,9 +43,11 @@
             <th>Default</th>
             <th>Recently used</th>
             <th>Capabilities</th>
+            <th>Supports trim</th>
             <th>Status</th>
           </tr>
         </thead>
+        <tbody id="tbody"/>
       </table>
     </div>
   </body>
