Add roll printing sample (#1006)
* Add roll printing sample

* Copied heavily from existing printing sample

* Changed functionality from existing printing sample as follows:

* Only display printers that support roll printing
* In table, create a row for each unique width for each printer

* Fix wording in README

* Update readme to list a milestone for bug to get fixed

* Update api-samples/printing/roll-printing/README.md

Co-authored-by: Joe Medley <jmedley@google.com>

* Update api-samples/printing/README.md

Co-authored-by: Joe Medley <jmedley@google.com>

* Convert a function call to a promise.

* Clean up a few errors setting element IDs.

Remove the main cancel button that is no longer used.  Instead, the
cancel button that gets created in the print job table is the one that
should be used.

* Consolidate the roll-printing sample with the regular sample

There is now a checkbox on the main UI to select roll printers or all
printers.  For roll printing, this sample now demonstrates how to check
if the printer is capable of roll printing, if the printer is capable of
trimming the paper after printing, and how the media length can be a
variable value.

* Update api-samples/printing/README.md

Co-authored-by: Oliver Dunk <oliver@oliverdunk.com>

* Update api-samples/printing/printers.js

Co-authored-by: Oliver Dunk <oliver@oliverdunk.com>

* Simplify fuction to use find instead of filter

Update README to link to roll printing info.

* Use new page instead of popup

* Update api-samples/printing/README.md

Co-authored-by: Joe Medley <jmedley@google.com>

---------

Co-authored-by: Joe Medley <jmedley@google.com>
Co-authored-by: Oliver Dunk <oliver@oliverdunk.com>

--- a/api-samples/printing/printers.html
+++ b/api-samples/printing/printers.html
@@ -28,11 +28,9 @@
     </div>
 
     <h2>Printers:</h2>
-    <div id="statusDiv">
-      <p id="jobStatus">JobId: <div id="jobIdDiv"></div></p>
-      <button id="cancelBtn">Cancel Printing</button>
-    </div>
     <div id="printers">
+      <input type='checkbox' id='rollPrinters' name='rollPrinters'>
+      <label for='rollPrinters'>Roll Printers</label>
       <table id="printersTable">
         <thead>
           <tr>
@@ -45,9 +43,11 @@
             <th>Default</th>
             <th>Recently used</th>
             <th>Capabilities</th>
+            <th>Supports trim</th>
             <th>Status</th>
           </tr>
         </thead>
+        <tbody id="tbody"/>
       </table>
     </div>
   </body>
