add settings import/export to fontSettings

--- a/api-samples/fontSettings/fontSettings Advanced/options.html
+++ b/api-samples/fontSettings/fontSettings Advanced/options.html
@@ -341,12 +341,16 @@ limitations under the License.
           </div>
         </div>
       </section>
-      <section id="footer">
+      <section>
         <button id="apply-settings">Apply settings</button>
         <button id="reset-this-script-button">
           Reset settings for this script
         </button>
         <button id="reset-all-button">Reset all settings</button>
+      </section>
+      <section id="footer">
+        <button id="import-settings">Import settings file</button>
+        <button id="export-settings">Export current settings</button>
       </section>
     </div>
   </body>
