--- a/api-samples/sandbox/sandbox/sandbox.html
+++ b/api-samples/sandbox/sandbox/sandbox.html
@@ -57,8 +57,8 @@ limitations under the License.
       // Set up message event handler:
       window.addEventListener('message', function (event) {
         const command = event.data.command;
-        const template = templates[event.data.templateName],
-          result = 'invalid request';
+        const template = templates[event.data.templateName];
+        let result = 'invalid request';
 
         // if we don't know the templateName requested, return an error message
         if (template) {
