--- a/api-samples/nativeMessaging/extension/main.html
+++ b/api-samples/nativeMessaging/extension/main.html
@@ -7,12 +7,12 @@
 
 <html>
   <head>
-    <script src='./main.js'></script>
+    <script src="./main.js"></script>
   </head>
   <body>
-    <button id='connect-button'>Connect</button>
-    <input id='input-text' type='text' />
-    <button id='send-message-button'>Send</button>
-    <div id='response'></div>
+    <button id="connect-button">Connect</button>
+    <input id="input-text" type="text" />
+    <button id="send-message-button">Send</button>
+    <div id="response"></div>
   </body>
 </html>
