--- a/functional-samples/ai.gemini-in-the-cloud/sidepanel/index.html
+++ b/functional-samples/ai.gemini-in-the-cloud/sidepanel/index.html
@@ -19,15 +19,16 @@
         min="0"
         max="2"
         step="0.01"
+        value="1"
       />
       <label for="temperature"
-        >Temperature: <span id="label-temperature"></span
-      ></label>
+        >Temperature: <span id="label-temperature">1</span></label
+      >
     </div>
     <button id="button-prompt" class="primary" disabled>Run</button>
     <div id="response" class="text" hidden></div>
     <div id="loading" class="text" hidden><span class="blink">...</span></div>
     <div id="error" class="text" hidden></div>
-    <script src="index.js" type="module"></script>
+    <script src="../dist/sidepanel.bundle.js" type="module"></script>
   </body>
 </html>
