--- a/functional-samples/ai.gemini-on-device-summarization/sidepanel/index.html
+++ b/functional-samples/ai.gemini-on-device-summarization/sidepanel/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="warning" hidden id="warning"></div>
-    <p class="speech-bubble" id="summary">Nothing to show...</p>
+    <p class="result" id="summary">Nothing to show...</p>
     <script src="index.js" type="module"></script>
   </body>
 </html>
