Move to side panel

--- a/functional-samples/tutorial.tabs-manager/sidepanel.html
+++ b/functional-samples/tutorial.tabs-manager/sidepanel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./popup.css" />
+    <link rel="stylesheet" href="./sidepanel.css" />
   </head>
   <body>
     <template id="li_template">
@@ -20,6 +20,6 @@
     <button>Group Tabs</button>
     <ul></ul>
 
-    <script src="./popup.js" type="module"></script>
+    <script src="./sidepanel.js" type="module"></script>
   </body>
 </html>
