Remove unneeded type attribute on script

--- a/functional-samples/tutorial.tabs-manager/sidepanel.html
+++ b/functional-samples/tutorial.tabs-manager/sidepanel.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <ul></ul>
-    <script src="./sidepanel.js" type="module"></script>
+    <script src="./sidepanel.js"></script>
   </body>
 </html>
