Modify to run be an extension rather than a Chrome App.

--- a/api-samples/identity/index.html
+++ b/api-samples/identity/index.html
@@ -3,7 +3,8 @@
     <title>Identity API Sample App</title>
     <link rel="stylesheet" type="text/css" href="sample_support/standard.css">
     <script src="identity.js"></script>
-    <script src="sample_support/sample_support.js"></script>
+    <!-- Disabling logger -->
+    <!-- <script src="sample_support/sample_support.js"></script> -->
   </head>
   <body>
     <div class="header">
