Apply more code-review markups

--- a/api-samples/identity/index.html
+++ b/api-samples/identity/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Identity API Sample App</title>
+    <title>Identity API Sample Extension</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="identity.js"></script>
   </head>
