--- a/api-samples/identity/index.html
+++ b/api-samples/identity/index.html
@@ -15,9 +15,9 @@
       <hr>
     </div>
     <div class="flows">
-      <h2>Get primary account email address</h2>
+      <h2>Query local Chrome account information</h2>
       <div class="flow">
-        <button id="get-email">Get email address</button>
+        <button id="get-email">Get primary account email address</button>
         <div id="email-info"></div>
       </div>
       <h2>OAuth on Google properties</h2>
