Migrate to latest summarizer API

--- a/functional-samples/ai.gemini-on-device-summarization/sidepanel/index.html
+++ b/functional-samples/ai.gemini-on-device-summarization/sidepanel/index.html
@@ -11,7 +11,7 @@
           <label for="type">Summary Type:</label>
           <select id="type">
             <option value="key-points" selected>Key Points</option>
-            <option value="tl;dr">TL;DR</option>
+            <option value="tldr">TL;DR</option>
             <option value="teaser">Teaser</option>
             <option value="headline">Headline</option>
           </select>
